more ways for FUNDING.yml

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -2,4 +2,4 @@
 
 github: [fabienb]
 ko_fi: [fabienb]
-custom: ["https://paypal.me/fabienbutazzi", paypal]
+custom: ["https://paypal.me/fabienbutazzi"]
