adding ko-fi to FUNDING.yml

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,5 @@
 # These are supported funding model platforms
 
 github: [fabienb]
-ko_fi: [fabienb]
+ko_fi: fabienb
 custom: ["https://paypal.me/fabienbutazzi"]
